--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -481,4 +481,10 @@
     font-size: 85% !important;
     border: 2px solid black !important;
   }
+  #edituserpage {
+    width: 60%;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+  }
 }
