--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -492,4 +492,10 @@
     font-size: 85% !important;
     border: 2px solid black !important;
   }
+  #edituserpage {
+    width: 90%;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+  }
 }
