--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -20,12 +20,13 @@
           Your acro: "<%= @currentgamedata.r1answer %>"
         <% end %>
       </div>
+      Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
       <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer &&
             @gamedata.r5answer && @gamedata.r6answer && @gamedata.r7answer && @gamedata.r8answer %>
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -35,7 +36,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -115,7 +116,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -125,7 +126,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -198,7 +199,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -208,7 +209,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -279,7 +280,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -289,7 +290,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -354,7 +355,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -364,7 +365,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -425,7 +426,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -435,7 +436,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -492,7 +493,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -502,7 +503,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -555,7 +556,7 @@
         <div class="allanswered">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
@@ -565,7 +566,7 @@
         <div class="allanswered hidden">
           You've completed every acro! Voting round coming up.
           <% if @gamedata.voteemailsent == false %>
-            Send email when voting round starts?
+            Send email to <%= current_user.email %> when voting round starts? <span style="font-size: 84%;">(change in settings if email address is incorrect) </span>
             <%= button_to "Send reminder email", {:controller => "games", :action => "sendemail", :method => "put", :game_id => @game.id}, :class => "button voteemailsend", remote: true %>
           <% else %>
             (vote reminder email has been scheduled)
