--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -457,7 +457,8 @@
   .mainpageviewbutton {
     font-size: 120%;
     font-weight: 700;
-    background-color: silver;
+    background-color: black;
+    color: white;
     width: 100%;
     margin: 0 auto;
     text-align: center;
