--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -468,7 +468,8 @@
   .mainpageviewbutton {
     font-size: 90%;
     font-weight: 700;
-    background-color: silver;
+    background-color: black;
+    color: white;
     width: 100%;
     margin: 0 auto;
     text-align: center;
