--- a/app/views/games/_roundplaylong.html.erb
+++ b/app/views/games/_roundplaylong.html.erb
@@ -1,6 +1,6 @@
   <div id="playrounds">
     <div class="playarea" id="r1play">
-      <div class="roundtitle">Round 1</div>
+      <div class="roundtitle">Round 1 of 8</div>
       Category: <span class="gamecategories"><%= @game.r1cat %></span>
       <div class="gameletters" id="round1letters"><%= @game.r1letters %></div>
       <div>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="playarea" id="r2play">
-      <div class="roundtitle">Round 2</div>
+      <div class="roundtitle">Round 2 of 8</div>
       Category: <span class="gamecategories"><%= @game.r2cat %></span>
       <div class="gameletters" id="round2letters"><%= @game.r2letters %></div>
       <div>
@@ -173,7 +173,7 @@
     </div>
 
     <div class="playarea" id="r3play">
-      <div class="roundtitle">Round 3</div>
+      <div class="roundtitle">Round 3 of 8</div>
       Category: <span class="gamecategories"><%= @game.r3cat %></span>
       <div class="gameletters" id="round3letters"><%= @game.r3letters %></div>
       <div>
@@ -254,7 +254,7 @@
     </div>
 
     <div class="playarea" id="r4play">
-      <div class="roundtitle">Round 4</div>
+      <div class="roundtitle">Round 4 of 8</div>
       Category: <span class="gamecategories"><%= @game.r4cat %></span>
       <div class="gameletters" id="round4letters"><%= @game.r4letters %></div>
       <div>
@@ -329,7 +329,7 @@
     </div>
 
     <div class="playarea" id="r5play">
-      <div class="roundtitle">Round 5</div>
+      <div class="roundtitle">Round 5 of 8</div>
       Category: <span class="gamecategories"><%= @game.r5cat %></span>
       <div class="gameletters" id="round5letters"><%= @game.r5letters %></div>
       <div>
@@ -400,7 +400,7 @@
     </div>
 
     <div class="playarea" id="r6play">
-      <div class="roundtitle">Round 6</div>
+      <div class="roundtitle">Round 6 of 8</div>
       Category: <span class="gamecategories"><%= @game.r6cat %></span>
       <div class="gameletters" id="round6letters"><%= @game.r6letters %></div>
       <div>
@@ -467,7 +467,7 @@
     </div>
 
     <div class="playarea" id="r7play">
-      <div class="roundtitle">Round 7</div>
+      <div class="roundtitle">Round 7 of 8</div>
       Category: <span class="gamecategories"><%= @game.r7cat %></span>
       <div class="gameletters" id="round7letters"><%= @game.r7letters %></div>
       <div>
@@ -530,7 +530,7 @@
     </div>
 
     <div class="playarea" id="r8play">
-      <div class="roundtitle">Round 8</div>
+      <div class="roundtitle">Round 8 of 8</div>
       Category: <span class="gamecategories"><%= @game.r8cat %></span>
       <div class="gameletters" id="round8letters"><%= @game.r8letters %></div>
       <div>
@@ -618,18 +618,22 @@
       <% end %>
     </div>
 
-    <span class="timeremaining">Time left to play: <%= @timeremaining %>.</span><br>
+    <span class="timeremaining">Time left to play: <%= @timeremaining %>.
+      <% if @game.playendtime != nil %>
+      <script>
+        var timeleft = <%= (((@game.playendtime - DateTime.now.utc).round) * 1000) + 1500 %>
+        function reloadPage() {
+          document.location.reload(true);
+        }
+        setTimeout(reloadPage, timeleft);
+      </script>
+    <% end %>
+    </span><br>
     # of players: <%= @game.playercount %> of 12:
     <% @players.each do |player| %>
       <%= User.where(:id => player).first.username %>
       <%= "," unless player == @players.last %>
     <% end %>
 
-    <script>
-      var timeleft = <%= (((@game.playendtime - DateTime.now.utc).round) * 1000) + 1500 %>
-      function reloadPage() {
-        document.location.reload(true);
-      }
-      setTimeout(reloadPage, timeleft);
-    </script>
+
   </div>
