--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -1,7 +1,7 @@
 <div id="playrounds">
 
     <div class="playarea" id="r1play">
-      <div class="roundtitle">Round 1</div>
+      <div class="roundtitle">Round 1 of 4</div>
       Category: <span class="gamecategories"><%= @game.r1cat %></span>
       <div class="gameletters" id="round1letters"><%= @game.r1letters %></div>
       <div>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="playarea" id="r2play">
-      <div class="roundtitle">Round 2</div>
+      <div class="roundtitle">Round 2 of 4</div>
       Category: <span class="gamecategories"><%= @game.r2cat %></span>
       <div class="gameletters" id="round2letters"><%= @game.r2letters %></div>
       <div>
@@ -126,7 +126,7 @@
     </div>
 
     <div class="playarea" id="r3play">
-      <div class="roundtitle">Round 3</div>
+      <div class="roundtitle">Round 3 of 4</div>
       Category: <span class="gamecategories"><%= @game.r3cat %></span>
       <div class="gameletters" id="round3letters"><%= @game.r3letters %></div>
       <div>
@@ -182,7 +182,7 @@
     </div>
 
     <div class="playarea" id="r4play">
-      <div class="roundtitle">Round 4</div>
+      <div class="roundtitle">Round 4 of 4</div>
       Category: <span class="gamecategories"><%= @game.r4cat %></span>
       <div class="gameletters" id="round4letters"><%= @game.r4letters %></div>
       <div>
@@ -262,18 +262,21 @@
         <% end %>
       <% end %>
     </div>
-    <span class="timeremaining">Time left to play: <%= @timeremaining %>.</span><br>
+    <span class="timeremaining">Time left to play: <%= @timeremaining %>.
+      <% if @game.playendtime != nil %>
+      <script>
+        var timeleft = <%= (((@game.playendtime - DateTime.now.utc).round) * 1000) + 1500 %>
+        function reloadPage() {
+          document.location.reload(true);
+        }
+        setTimeout(reloadPage, timeleft);
+      </script>
+    <% end %>
+    </span><br>
     # of players: <%= @game.playercount %> of 12:
     <% @players.each do |player| %>
       <%= User.where(:id => player).first.username %>
       <%= "," unless player == @players.last %>
     <% end %>
 
-    <script>
-      var timeleft = <%= (((@game.playendtime - DateTime.now.utc).round) * 1000) + 1500 %>
-      function reloadPage() {
-        document.location.reload(true);
-      }
-      setTimeout(reloadPage, timeleft);
-    </script>
   </div>
