--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,20 +2,20 @@
 <%= render "shared/topbar" %>
 
 <div id="newgamepage">
-   <!-- <%= form_for(@game) do |f| %>
+   <%= form_for(@game) do |f| %>
 
     <%= f.hidden_field :length, :value => "1hour" %>
     <%= f.hidden_field :group_id, :value => 0 %>
 
     <div class="actions">
-      <%= f.submit "Play Quick Game", :class => "button" %>
+      <%= f.submit "Play 4-Round Game", :class => "button" %>
     </div>
-    (4 rounds: 1 hour to play, 2 hours to vote)
+    <!-- (4 rounds) -->
   <% end %>
-  -->
+
 
   <br><br>
-  <%= form_for(@game) do |g| %>
+  <!-- <%= form_for(@game) do |g| %>
 
     <%= g.hidden_field :length, :value => "6hour" %>
     <%= g.hidden_field :group_id, :value => 0 %>
@@ -24,12 +24,12 @@
       <%= g.submit "Play Game", :class => "button" %>
     </div>
     (8 rounds: 6 hours to play, 24 hours to vote)
-  <% end %>
+  <% end %> -->
 
   <% if current_user.tooltips == true %>
     <fieldset class="tooltips">
       <legend style="text-align: left; margin-left: 6px;">Tip</legend>
-      Press "Play Game" to join or start a game. Either you will join a game in progress that does not yet have 12 players, or a new game will be created.
+      Press "Play 4-Round Game" to join or start a game. Either you will join a game in progress that does not yet have 12 players, or a new game will be created.
       <%= button_to "Turn tips off", {:controller => "pages", :action => "tipsoff", :method => "put"}, :class => "button tipbutton", remote: true %>
     </fieldset>
     <script>
