--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -43,23 +43,29 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <% if @gamedata.r1answer && @gamedata.r2answer %>
-          <%= button_tag "Round 3", :class => "r3playbutton" %>
+        <% if @gamedata.r1answer && @gamedata.r2answer == nil %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %><br>
+        <% elsif @gamedata.r1answer && @gamedata.r2answer %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplayanswered" %><br>
         <% else %>
-          <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
-        <% end %>
-        <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer %>
-          <%= button_tag "Round 4", :class => "r4playbutton" %>
-        <% else %>
-          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplaylocked" %><br>
         <% end %>
         <div>
-          <% if @gamedata.r1answer %>
-            <%= button_tag "Round 1", :class => "r1playbutton" %>
-            <%= button_tag "Round 2", :class => "r2playbutton" %><br>
+          <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplayanswered" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
           <% else %>
-            <%= button_tag "Round 1", :class => "r1playbutton hidden" %>
-            <%= button_tag "Round 2", :class => "r2playbutton hidden" %><br>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplaylocked" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
           <% end %>
         </div>
       </div>
@@ -108,19 +114,30 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <% if @gamedata.r2answer %>
-          <%= button_tag "Round 3", :class => "r3playbutton" %>
+        <% if @gamedata.r1answer && @gamedata.r2answer == nil %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %><br>
+        <% elsif @gamedata.r1answer && @gamedata.r2answer %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplayanswered" %><br>
         <% else %>
-          <%= button_tag "Round 3", :class => "r3playbutton hidden" %>
-        <% end %>
-        <% if @gamedata.r3answer %>
-          <%= button_tag "Round 4", :class => "r4playbutton" %>
-        <% else %>
-          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplaylocked" %><br>
         <% end %>
         <div>
-          <%= button_tag "Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplayanswered" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% else %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplaylocked" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% end %>
         </div>
       </div>
     </div>
@@ -168,15 +185,30 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <%= button_tag "Round 3", :class => "r3playbutton" %>
-        <% if @gamedata.r3answer %>
-          <%= button_tag "Round 4", :class => "r4playbutton" %>
+        <% if @gamedata.r1answer && @gamedata.r2answer == nil %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %><br>
+        <% elsif @gamedata.r1answer && @gamedata.r2answer %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplayanswered" %><br>
         <% else %>
-          <%= button_tag "Round 4", :class => "r4playbutton hidden" %>
+          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplaylocked" %><br>
         <% end %>
         <div>
-          <%= button_tag "Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplayanswered" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% else %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplaylocked" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% end %>
         </div>
       </div>
     </div>
@@ -224,11 +256,30 @@
         </div>
       <% end %>
       <div class="playroundbutton">
-        <%= button_tag "Round 3", :class => "r3playbutton" %>
-        <%= button_tag "Round 4", :class => "r4playbutton" %>
-        <div>
+        <% if @gamedata.r1answer && @gamedata.r2answer == nil %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton" %><br>
+        <% elsif @gamedata.r1answer && @gamedata.r2answer %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplayanswered" %><br>
+        <% else %>
           <%= button_tag "Round 1", :class => "r1playbutton" %>
-          <%= button_tag "Round 2", :class => "r2playbutton" %>
+          <%= button_tag "Round 2", :class => "r2playbutton roundplaylocked" %><br>
+        <% end %>
+        <div>
+          <% if @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer && @gamedata.r4answer %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplayanswered" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplayanswered" %><br>
+          <% elsif @gamedata.r1answer && @gamedata.r2answer && @gamedata.r3answer == nil %>
+            <%= button_tag "Round 3", :class => "r3playbutton" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% else %>
+            <%= button_tag "Round 3", :class => "r3playbutton roundplaylocked" %>
+            <%= button_tag "Round 4", :class => "r4playbutton roundplaylocked" %><br>
+          <% end %>
         </div>
       </div>
     </div>
