next round text removed

--- a/app/assets/javascripts/page/playgame.js.erb
+++ b/app/assets/javascripts/page/playgame.js.erb
@@ -24,13 +24,13 @@ function removeButtonAnims() {
   $(".r7playbutton").removeClass("animated flip");
   $(".r8playbutton").removeClass("animated flip");
   $(".allanswered").removeClass("animated bounce");
-  $(".r2playbutton").text("Round 2", 600, "easeOutBounce");
-  $(".r3playbutton").text("Round 3", 600, "easeOutBounce");
-  $(".r4playbutton").text("Round 4", 600, "easeOutBounce");
-  $(".r5playbutton").text("Round 5", 600, "easeOutBounce");
-  $(".r6playbutton").text("Round 6", 600, "easeOutBounce");
-  $(".r7playbutton").text("Round 7", 600, "easeOutBounce");
-  $(".r8playbutton").text("Round 8", 600, "easeOutBounce");
+  // $(".r2playbutton").text("Round 2", 600, "easeOutBounce");
+  // $(".r3playbutton").text("Round 3", 600, "easeOutBounce");
+  // $(".r4playbutton").text("Round 4", 600, "easeOutBounce");
+  // $(".r5playbutton").text("Round 5", 600, "easeOutBounce");
+  // $(".r6playbutton").text("Round 6", 600, "easeOutBounce");
+  // $(".r7playbutton").text("Round 7", 600, "easeOutBounce");
+  // $(".r8playbutton").text("Round 8", 600, "easeOutBounce");
 }
 
 $(".r1playbutton").click(function () {
