--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -39,7 +39,7 @@
             <div class="button">
           <% end %>
             <span class="gamelistname"><%= game.name %></span><br>
-            <span class="gamelisttime">(Play ends in <%= @timeremaining %>)</span><br>
+            <span class="gamelisttime">(Voting begins in <%= @timeremaining %>)</span><br>
             Players: <%= game.playercount %>
           </div>
         <% end %>
