--- a/app/assets/stylesheets/size-largest.css
+++ b/app/assets/stylesheets/size-largest.css
@@ -306,6 +306,10 @@
     background-position: bottom right;
     background-size: 26px;
   }
+  .roundbuttonhighlight {
+    box-shadow: 0px 0px 12px black;
+    border: 1px solid black;
+  }
   .allanswered {
     color: green;
     font-weight: 700;
