--- a/app/views/games/_roundplayshort.html.erb
+++ b/app/views/games/_roundplayshort.html.erb
@@ -44,13 +44,13 @@
       <% end %>
       <div class="playroundbutton">
         <% if @gamedata.r1answer && @gamedata.r2answer == nil %>
-          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered roundbuttonhighlight" %>
           <%= button_tag "Round 2", :class => "r2playbutton" %><br>
         <% elsif @gamedata.r1answer && @gamedata.r2answer %>
-          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered" %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundplayanswered roundbuttonhighlight" %>
           <%= button_tag "Round 2", :class => "r2playbutton roundplayanswered" %><br>
         <% else %>
-          <%= button_tag "Round 1", :class => "r1playbutton" %>
+          <%= button_tag "Round 1", :class => "r1playbutton roundbuttonhighlight" %>
           <%= button_tag "Round 2", :class => "r2playbutton roundplaylocked" %><br>
         <% end %>
         <div>
