--- a/app/assets/stylesheets/size-smallest.css
+++ b/app/assets/stylesheets/size-smallest.css
@@ -318,6 +318,7 @@
   }
   .roundbuttonhighlight {
     box-shadow: 0px 0px 12px black;
+    border: 1px solid black;
   }
   .allanswered {
     color: green;
