--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>AcroFriends</title>
+  <meta name="description" content="Welcome to AcroFriends - the casual turn-based acronym creation word game inspired by the classic game Acrophobia.">
+  <meta name="keywords" content="AcroFriends, acronyms, game, casual, Acrophobia, browser game">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
