--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -2,29 +2,32 @@
 <%= render "shared/topbar" %>
 
 <div id="newgamepage">
-   <%= form_for(@game) do |f| %>
+  <% if @gamesinprogress.count < 61 %>
+    <%= form_for(@game) do |f| %>
 
-    <%= f.hidden_field :length, :value => "1hour" %>
-    <%= f.hidden_field :group_id, :value => 0 %>
+      <%= f.hidden_field :length, :value => "1hour" %>
+      <%= f.hidden_field :group_id, :value => 0 %>
 
-    <div class="actions">
-      <%= f.submit "Play 4-Round Game", :class => "button" %>
-    </div>
-    <!-- (4 rounds) -->
+      <div class="actions">
+        <%= f.submit "Play 4-Round Game", :class => "button" %>
+      </div>
+      <!-- (4 rounds) -->
+    <% end %>
+
+    <br><br>
+    <!-- <%= form_for(@game) do |g| %>
+
+      <%= g.hidden_field :length, :value => "6hour" %>
+      <%= g.hidden_field :group_id, :value => 0 %>
+
+      <div class="actions">
+        <%= g.submit "Play Game", :class => "button" %>
+      </div>
+      (8 rounds: 6 hours to play, 24 hours to vote)
+    <% end %> -->
+  <% else %>
+    Sorry, there is a maximum of 60 active games per player.
   <% end %>
-
-
-  <br><br>
-  <!-- <%= form_for(@game) do |g| %>
-
-    <%= g.hidden_field :length, :value => "6hour" %>
-    <%= g.hidden_field :group_id, :value => 0 %>
-
-    <div class="actions">
-      <%= g.submit "Play Game", :class => "button" %>
-    </div>
-    (8 rounds: 6 hours to play, 24 hours to vote)
-  <% end %> -->
 
   <% if current_user.tooltips == true %>
     <fieldset class="tooltips">
